--- a/vignettes/BaselineRegularization.Rmd
+++ b/vignettes/BaselineRegularization.Rmd
@@ -25,10 +25,10 @@ default_params <- defineBRParameters()
 
 ## Data
 Typically, one would connect to a database containing the CDM using the DBI package.
-For the examples here, we will use _a much smaller dataset_
+For the examples here, we will use a small subset of CMS 2008-2010 Data Entrepreneurs’ Synthetic Public Use File (SynPUF) included with the package.
 
 ```{r load data}
-# TODO: Load data
+data("synpuf_mini")
 ```
 
 ## First example: one condition, all drugs
@@ -41,20 +41,21 @@ We separate the process into three major steps:
 ### Preparing the data: generating the feature matrix and response vector
 
 To generate the feature matrix and response vector, we have to have a condition of interest the risk of which we wish to model, and data from which to extract the drug features and patient timelines.
-For our example, our condition of interest will be `#TODO`
-```{r define response event, eval=FALSE}
-response_event = #TODO decide on a concept id!
+For our example, our condition of interest will be _Aplastic anemia_.
+```{r define response event}
+response_event = 137829 # The concept id for "Aplastic anemia"
 ```
 
-When available, we recommend using derived CDM tables for analysis.
-```{r build data simple, eval=FALSE}
-br_data <- prepareBRDataFromEras(
-  observation_period = observation_period,
-  drug_era = drug_era,
-  condition_era = condition_era,
+When available, we recommend using derived CDM tables for analysis, but in our SynPUF data, we only have clinical tables available, and we will use them for this example.
+```{r build data simple}
+br_data <- prepareBRDataFromOccurrence(
+  observation_period = synpuf_mini$observation_period,
+  condition_occurrence = synpuf_mini$condition_occurrence,
+  drug_exposure = synpuf_mini$drug_exposure,
   response_event = response_event )
 ```
-Baseline Regularization can also use clinical tables that are always available (see [Using clinical tables for preparing the data])
+See [Using derived CDM tables for preparing the data] for an example with derived tables.
+See [Using a database source for preparing the data] for an example using a database source.
 
 ### Fitting baseline regularization
 
@@ -86,7 +87,9 @@ Without guidance from the user, Baseline Regularization treats each drug that ha
 
 ## Fourth example: using condition categories
 
-## Using clinical tables for preparing the data
+## Using a database source for preparing the data
+
+## Using derived CDM tables for preparing the data
 
 ## Additional data preparation options
 
