vignette and doc update

--- a/vignettes/BaselineRegularization.Rmd
+++ b/vignettes/BaselineRegularization.Rmd
@@ -17,6 +17,7 @@ Baseline Regularization is a package for estimating the effects of drugs on cond
 in OMOP CDM format.
 This document contains a few examples illustrating how to run Baseline Regularization.
 For this vignette we will assume you have loaded the package.
+
 ```{r load package}
 library(BaselineRegularization)
 ```
@@ -35,14 +36,16 @@ data("synpuf_mini")
 ## First example: one condition, all drugs
 The simplest way to use Baseline Regularization is to apply it directly to the data to predict the effects of all drugs in the data on the risk of one condition of interest.
 We separate the process into three major steps:
-1. generating feature matrix and response vector from the data,
-2. fitting baseline regularization, and
-3. inspecting the results.
+
+ 1. generating feature matrix and response vector from the data,
+ 2. fitting baseline regularization, and
+ 3. inspecting the results.
 
 ### Preparing the data: generating the feature matrix and response vector
 
 To generate the feature matrix and response vector, we have to have a condition of interest the risk of which we wish to model, and data from which to extract the drug features and patient timelines.
 For our example, our condition of interest will be _Aplastic anemia_.
+
 ```{r define response event}
 response_event = 137829 # The concept id for "Aplastic anemia"
 ```
@@ -66,25 +69,31 @@ fit1 <- fitBaselineRegularization( br_data )
 ```
 
 This runs baseline regularization with the default parameters, which are
+
 ```{r show default paraemeters, echo=FALSE, results='asis'}
 knitr::kable( data.frame("Default Value" = unlist(default_params), check.names = F) )
 ```
-(see the documentation for [defineBRParameters()] for further details).
+
+(see the documentation for `defineBRParameters()` for further details).
 
 You may set different parameters using [defineBRParameters()] like so:
+
 ```{r fit BR with parameters, eval=FALSE}
 parameters <- defineBRParameters( lambda1 = 1 )
 
 fit2 <- fitBaselineRegularization( br_data, parameters )
 ```
+
 Note that only the parameters you'd like to change from the default need to be specified, the rest keep their default values.
 
 ### Inspecting the results
 
 ## Second example: managing drugs and drug categories
+
 Without guidance from the user, Baseline Regularization treats each drug that has a distinct concept_id and occurs in the data as a feature for the model.
 However, we are often interested in examining broader categories of drugs.
 As an example, consider the drug categories used in the OMOP task [TODO: cite]:
+
 ```{r show omop drug table, echo=FALSE, results = 'asis'}
 data("omop_concept_names")
 knitr::kable(
@@ -94,13 +103,17 @@ knitr::kable(
     arrange( concept_id ) ) %>%
     mutate( concept_id = as.character(concept_id) ), align = "rl" )
 ```
+
 These drug categories are broad.
 In the OMOP CDM vocabulary, the `concept_ancestor` table can be used to infer which concept_id's are encompassed by such broader concepts.
 Here, we load a small subset of this table included with our package:
+
 ```{r load doi concept ancestr}
 data( "omop_doi_concept_ancestor" )
 ```
+
 To illustrate, here are a few drug concept ids in our data fall into the "ACE Inhibitor" category:
+
 ```{r show drugs matching ACE Inhibitors, results='asis'}
 data( "cdm_some_concept_names" )
 drug_concept_names <-
@@ -116,13 +129,16 @@ doi_drug_names %>%
   mutate( concept_id = as.character(concept_id) ) %>%
   knitr::kable()
 ```
+
 To make use of the `concept_ancestor` table, we introduce the function `ancestorConceptProcessor`, which we can use as follows:
-```{r define drug categories, eval=FALSE}
+
+```{r define drug categories}
 drug_concept_processor <- ancestorConceptProcessor(
   concept_ancestor = omop_doi_concept_ancestor,
   concept_list = 600000001:600000010,
   handle_remaining = "drop" ) 
 ```
+
 See `?ancestorConceptProcessor` for more details, briefly, the parameters are:
 
  * `concept_ancestor` the table that defines the concept ancestor relationships
@@ -130,7 +146,8 @@ See `?ancestorConceptProcessor` for more details, briefly, the parameters are:
  * `handle_remaining` a string that defines how to handle concepts that aren't descendants of the concepts in `concept_list`: `"drop"` (the default) simply removes them from the analysis. 
 
 Then, we add it to the call of the data preparation function.
-```{r prepare data with categories, eval=FALSE}
+
+```{r prepare data with categories}
 br_data_omop_drugs <- prepareBRData(
   observation_period = synpuf_mini$observation_period,
   condition_occurrence = synpuf_mini$condition_occurrence,
@@ -139,14 +156,30 @@ br_data_omop_drugs <- prepareBRData(
   drug_concept_processor = drug_concept_processor )
 ```
 
+Nothing changes when fitting the model
+
+```{r fit BR with omop drugs}
+fit_omop_drugs <- fitBaselineRegularization( br_data_omop_drugs )
+```
+
+And we can inspect the results with `getCoefficients` as before:
+
+```{r inspect coefficients (omop drug run)}
+getCoefficients( fit_omop_drugs, names_table = doi_concept_names )
+```
+
+We can see that now each beta coefficient corresponds to a high-level drug concept that we have specified.
+
 ## Third example: estimating the risk of multiple conditions
+
 It is often of interest to use the same data to model the risk of multiple conditions.
 We provide a convenient way to run Baseline Regularization for multiple condition targets:
-```{r run with multiple conditions, eval=FALSE}
+
+```{r run with multiple conditions}
 response_events = c(
-  1, # Something
-  2, # Something
-  3) # Something
+  137829, # The concept id for "Aplastic anemia"
+  315296, # The concept id for "Preinfarction syndrome"
+  432585) # The concept id for "Blood coagulation disorder"
 
 br_data_multiple_conditions <- prepareBRData(
   observation_period = synpuf_mini$observation_period,
@@ -159,6 +192,13 @@ br_data_multiple_conditions <- prepareBRData(
 fit_multiple <- fitBaselineRegularization( br_data_multiple_conditions )
 ```
 
+This yields a list of fits, one for each condition being modeled:
+
+```{r inspect coefficients multiple conditions}
+getCoefficients( fit_multiple[[1]], names_table = doi_concept_names )
+getCoefficients( fit_multiple[[2]], names_table = doi_concept_names )
+getCoefficients( fit_multiple[[3]], names_table = doi_concept_names )
+```
 ## Fourth example: using condition categories
 Just as we specified drug categories, we can specify condition categories.
 Again, we will use the OMOP task as an example
