Updated readme and vignette

--- a/vignettes/BaselineRegularization.Rmd
+++ b/vignettes/BaselineRegularization.Rmd
@@ -1,6 +1,7 @@
 ---
-title: 'Baseline Regularization'
+title: "Baseline Regularization"
 author: "Yuriy Sverchkov"
+date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Baseline Regularization}
